--- a/src/app/projects/projects.html
+++ b/src/app/projects/projects.html
@@ -213,6 +213,7 @@
             <button class="action-btn-small" (click)="openEditProject(project)">Edit</button>
           }
           <button class="action-btn-small secondary" (click)="openViewProject(project)">View</button>
+          <button class="action-btn-small chat-btn" (click)="openProjectChat(project)">💬 Chat</button>
         </div>
       </div>
     }
