--- a/src/app/projects/projects.less
+++ b/src/app/projects/projects.less
@@ -532,6 +532,16 @@
               color: white;
             }
           }
+
+          &.chat-btn {
+            background: #27ae60;
+            border-color: #27ae60;
+
+            &:hover {
+              background: #229954;
+              border-color: #229954;
+            }
+          }
         }
       }
     }
