--- a/src/app/navigation/navigation.html
+++ b/src/app/navigation/navigation.html
@@ -5,7 +5,7 @@
   
   <ul class="nav-menu">
     <li>
-      <a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="onNavigationClick()">
+      <a routerLink="/home" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}" (click)="onNavigationClick()">
         <i class="icon">🏠</i>
         Home
       </a>
